Fix x post button icon color, horizontal scrollbar

--- a/src/components/templates/post/post.scss
+++ b/src/components/templates/post/post.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   padding-bottom: 10px;
+  overflow-x: hidden;
 
   .post-video-iframe {
     position: sticky;
@@ -84,7 +85,7 @@
   &-image-container {
     height: 50vh;
     margin: 0;
-    max-width: 100vw;
+    width: 100vw;
 
     @media screen and (max-width: 1024px) {
       overflow: hidden;
@@ -94,7 +95,7 @@
 
   &-image {
     min-height: 75vh;
-    width: 100vw;
+    width: 100%;
     text-align: center;
 
     @media screen and (max-width: 1024px) {
@@ -199,6 +200,7 @@
     }
 
     &.vertical {
+
       a,
       .share-link {
         opacity: 1;
@@ -281,7 +283,7 @@
       margin-top: 40px;
     }
 
-    article > .blog-post-content > p {
+    article>.blog-post-content>p {
       margin: 20px 0;
       text-align: left;
 
